src/objects/SDHC_Loan_Payment__c.object
<CustomObject>
    <description>LPAM - Payments applied towards a loan.</description>
    <fields>
        <fullName>Actual_Financial__c</fullName>
        <label>Actual Financial</label>
        <referenceTo>Actual_Financial__c</referenceTo>
        <relationshipName>SDHC_Loan_Payments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Payment_Type__c</fullName>
        <label>Loan Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residual Receipt</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Surplus Cash</fullName>
                </value>
                <value>
                    <fullName>Amortized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Any other fees that apply to this loan</inlineHelpText>
        <label>Other</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Year__c</fullName>
        <label>Payment Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Penalty_Fees__c</fullName>
        <label>Penalty Fees</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <label>Principal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHC_Accrued_Interest__c</fullName>
        <label>SDHC Accrued Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHC_Loan__c</fullName>
        <label>SDHC Loan</label>
        <referenceTo>SDHC_Loan__c</referenceTo>
        <relationshipName>Loan_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDHC_Outstanding_Principle__c</fullName>
        <label>SDHC Outstanding Principle</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHC_Total_Outstanding_Balance__c</fullName>
        <label>SDHC Total Outstanding Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <formula>Principal__c +  Interest__c +  Penalty_Fees__c + Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SDHC Loan Payment/Balance</label>
    <nameField>
        <displayFormat>LoanPMT-{00000}</displayFormat>
        <label>Loan Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDHC Loan Payments/Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>